<resources>

    <string name="direito_registro"> Registro @ 2019-2020 </string>
    <string name="app_version"></string>

    <string name="facebook_app_id">935889986852459</string>
    <string name="fb_login_protocol_scheme">fb935889986852459</string>

    <string name="app_name">Registro</string>
    <string name="login_email">Digite seu e-mail</string>
    <string name="login_senha">Digite sua senha</string>
    <string name="action_settings">Configurações</string>
    <string name="action_sair">Sair</string>
    <string name="textoConfirma">As informações abaixo estão corretas?</string>
    <string name="texto_imagem">Está foto será inserida no documento</string>
    <string name="textobotaoenviar">Enviar Cadastro</string>
    <string name="textobotaoIniciar">Iniciar Atendimento</string>
    <string name="textobotaoExportar">Exportar Registros</string>
    <string name="pasta">"Local: "</string>
    <string name="email">Email: </string>
    <string name="email_contato">" suporte.registroapp@gmail.com"</string>
    <string name="endereco_servidor">Login:  </string>
    <string name="senha_servidor">"Senha: "</string>
    <string name="nome">"Nome: "</string>
    <string name="textobotaoFormulario">Formularios</string>
    <string name="textobotaoConfiguracao">Configuração</string>
    <string name="textobotaoSair">Sair</string>
    <string name="textoOpcoes">Clique para abrir opções</string>
</resources>
