<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="telas.ConfiguracoesActivity">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginLeft="2dp"
                android:id="@+id/textView2"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="Usuário"
                android:textSize="20sp"
                tools:ignore="RtlCompat"
                android:layout_marginTop="@dimen/distancia"/>

            <TableRow
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/email"
                    android:visibility="gone"/>

                <EditText
                    android:textColor="@color/colorAccent"
                    android:background="@drawable/edittext_white_style"
                    style="@style/MyEditTextTheme"
                    android:id="@+id/etEmail"
                    android:hint="E-mail"
                    android:textColorHint="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </TableRow>

            <TableRow
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:visibility="gone"
                    android:text="@string/nome"/>

                <EditText
                    android:textColor="@color/colorAccent"
                    style="@style/MyEditTextTheme"
                    android:id="@+id/etNome"
                    android:hint="Nome"
                    android:textColorHint="@color/colorPrimary"
                    android:background="@drawable/edittext_white_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </TableRow>

        <ImageView
            android:layout_margin="4dp"
            android:id="@+id/assinaturaFiscal"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textStyle="bold"
                tools:ignore="RtlCompat"
                android:text="Suporte"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="@dimen/distancia"
                android:textSize="20sp" />

            <TableRow
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:visibility="gone"
                    android:text="@string/email"/>

                <TextView
                    android:text="@string/email_contato"
                    android:background="@drawable/edittext_white_style"
                    android:layout_width="match_parent"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />
            </TableRow>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Armazenamento"
                android:textAlignment="textStart"
                android:textStyle="bold"
                tools:ignore="RtlCompat"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="@dimen/distancia"
                android:textSize="20sp" />

            <TableRow
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:visibility="gone"
                    android:text="@string/pasta"/>

                <TextView
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/caminhoPasta"
                    android:background="@drawable/edittext_white_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />
            </TableRow>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textStyle="bold"
                tools:ignore="RtlCompat"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="@dimen/distancia"
                android:text="Registro"
                android:textSize="20sp" />

            <com.felipecsl.gifimageview.library.GifImageView
                android:id="@+id/gifRegistro"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:scaleType="fitCenter" />

            <TextView
                android:textColor="@color/configColor"
                android:textSize="18sp"
                android:textAlignment="center"
                android:text="@string/direito_registro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_marginTop="@dimen/distancia"
                android:textColor="@color/configColor"
                android:textSize="18sp"
                android:textAlignment="center"
                android:text="@string/app_version"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="RtlCompat" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/botaoSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:clickable="true"
            app:fabSize="auto"
            app:srcCompat="@drawable/ic_save"
            tools:ignore="VectorDrawableCompat" />

    </RelativeLayout>

</RelativeLayout>
